--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,18 +2,38 @@ name: release
 
 on:
   push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 2
+    - name: Check if version changed
+      id: version-check
+      run: |
+        CURRENT_VERSION=$(jq -r '.version' package.json)
+        git checkout HEAD~1 -- package.json
+        PREVIOUS_VERSION=$(jq -r '.version' package.json)
+        git checkout HEAD -- package.json
+        if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
+          echo "version_changed=true" >> $GITHUB_OUTPUT
+          echo "Version changed from $PREVIOUS_VERSION to $CURRENT_VERSION"
+        else
+          echo "version_changed=false" >> $GITHUB_OUTPUT
+          echo "Version unchanged: $CURRENT_VERSION"
+        fi
     - name: install node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v4
       with:
         node-version: 20.x
     - name: Cache node dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       env:
         cache-name: cache-dependencies
       with:
@@ -29,6 +49,7 @@ jobs:
     - name: build
       run: npm run build
     - name: release
+      if: steps.version-check.outputs.version_changed == 'true'
       run: npm run release
       env:
         GITHUB_TOKEN: ${{ github.token }}
