--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,22 @@
   "compilerOptions": {
     "allowUnreachableCode": false,
     "importHelpers": true,
-    "target": "es6",
-    "disableSizeLimit": true,
+    "target": "ES2020",
     "module": "commonjs",
+    "moduleResolution": "node",
     "noImplicitAny": false,
     "removeComments": false,
     "preserveConstEnums": false,
     "sourceMap": false,
     "downlevelIteration": true,
-    "lib": [ "es6", "dom" ],
+    "lib": [ "ES2020", "dom" ],
     "typeRoots": [
       "./typings",
       "./node_modules/@types"
-    ]
+    ],
+    "paths": {
+      "zotero-plugin/*": ["./node_modules/zotero-plugin/dist/esm/*"]
+    }
   },
   "include": [
     "*.ts"
